scrollbar weird fixes

--- a/style.css
+++ b/style.css
@@ -409,6 +409,8 @@ nav {
     position: relative;
     width: auto;
     height: auto;
+}
+#content-container.overflowXHidden {
     overflow-x: hidden;
 }
 main#swup {
